<?xml version="1.0"?>
<package>
  <name>using_markers_omega</name>
  <version>0.0.0</version>
  <description>The using_markers_omega package</description>
  <maintainer email="olmo.moreno@iit.it">olmo</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <export>
    </export>
</package>
